# aaron-website9

./: .gitignore  DATABASE_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  FRONTEND_UPDATE.md  README.md  RENDER_DEPLOYMENT.md  deploy_render.sh  docker-compose.yml  render.yaml.template
backend-django/: .env  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  build.sh  check_env.py  env.production.template  manage.py  pyproject.toml  requirements.txt  test_imports.py
backend-django/myapps/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend-django/myapps/Authorization/: apps.py  auth_views.py  feedback_views.py  models.py  serializers.py  urls.py
backend-django/myapps/Authorization/migrations/: 0001_initial.py  0002_feedback.py  0003_remove_feedback_updated_at_alter_feedback_level.py
backend-django/myapps/Ecpay/: apps.py  config.py  models.py  serializers.py  urls.py  views.py
backend-django/myapps/Ecpay/migrations/: 0001_initial.py  0002_order_merchantid_alter_order_payment_method.py  0003_remove_order_merchantid_remove_order_is_paid_and_more.py  0004_order_merchant_trade_no_order_paid_at.py
backend-django/myapps/Topic/: apps.py  familiarity_views.py  models.py  serializers.py  services.py  soft_delete_views.py  urls.py  views.py
backend-django/myapps/Topic/migrations/: 0001_initial.py  0002_remove_userfamiliarity_uq_user_quiz_topic_and_more.py  0003_rename_difficulty_id_topic_difficulty.py  0004_alter_topic_options_and_more.py  0004_userfavorite_quiz_alter_userfavorite_topic.py  0005_alter_topic_options.py  0006_merge_20250813_1504.py  0007_add_database_indexes.py  (+2 more)
(+68 files in other folders)
